Implemented fucntionality for products (adding them from file)
