# src/modules/products/products.controller.ts
@@ -1,4 +1,27 @@
-import { Controller } from '@nestjs/common';
+import {
+  Controller,
+  Get,
+  UseInterceptors,
+  ClassSerializerInterceptor,
+} from '@nestjs/common';
+import { ProductsService } from './products.service';
+import { Product } from './entities/product.entity';
+import { ApiTags, ApiOperation, ApiResponse } from '@nestjs/swagger';
 
+@ApiTags('products')
 @Controller('products')
-export class ProductsController {}
+@UseInterceptors(ClassSerializerInterceptor)
+export class ProductsController {
+  constructor(private productsService: ProductsService) {}
+
+  @Get()
+  @ApiOperation({ summary: 'Get all products' })
+  @ApiResponse({
+    status: 200,
+    description: 'List of products with brand and categories',
+    type: [Product],
+  })
+  findAll(): Promise<Product[]> {
+    return this.productsService.findAll();
+  }
+}
